--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "decode-jwt": "^1.0.2",
